Criada a estrutura basica da aplicacao

--- a/pages/map.html
+++ b/pages/map.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge Salesforce</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <header>
         <h1>Challenge Salesforce</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="pages/map.html">Mapa e nomes</a></li>
-        </ul>
-    </nav>
+    <p>Livia</p>
+    <p>Luana</p>
+    <p>Celeste</p>
 </body>
 </html>
