Adicionado o conteúdo na homepage e CSS

--- a/index.html
+++ b/index.html
@@ -7,13 +7,39 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
-        <h1>Challenge Salesforce</h1>
+    <header class="header">
+        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
     </header>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="pages/map.html">Mapa e nomes</a></li>
+            <li><a href="pages/login.html">Produtos</a></li>
+            <li><a href="pages/empresa.html">Empresa</a></li>
+            <li><a href="pages/suporte.html">Suporte</a></li>
+            <li><a href="pages/login.html">Login</a></li>
         </ul>
     </nav>
+    <section class="solution">
+        <h3>Solução para o projeto:</h3>
+        <p>Nosso objetivo é tornar o site mais acessível com ferramentas como: </p>
+        <ul>
+            <li>Cores contrastantes</li>
+            <li>Imagens e botões com descrições</li>
+            <li>Navegação acessível (Hierarquias na estrutura da página, menu pull-down largo.)</li>
+            <li>Atalhos de teclado e comando por voz</li>  
+            <li>Avatar de libras</li>
+            <li>Ações claras e objetivas</li>
+        </ul>
+        <p>Como segundo objetivo, queremos tornar o site mais atrativo para captar mais clientes, manter os anteriores e gerar mais vendas.
+        <ul>
+            <li>Implementação de um Chatbot atrativo</li>
+            <li>Site mais interativo</li>
+            <li>Responsividade</li>
+            <li>Otimizar a quantidade de informação na página</li>
+            <li>Layout intuitivo</li>
+        </ul>
+        </p>
+    </section>
+    <footer></footer>
 </body>
 </html>
