--- a/pages/map.html
+++ b/pages/map.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <header>
-        <h1>Challenge Salesforce</h1>
+    <header class="header">
+        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
     </header>
-    <p>Livia</p>
-    <p>Luana</p>
-    <p>Celeste</p>
+    <nav class="nav-bar">
+        <ul>
+            <li><a href="./map.html">Mapa e nomes</a></li>
+            <li><a href="./login.html">Produtos</a></li>
+            <li><a href="./empresa.html">Empresa</a></li>
+            <li><a href="./suporte.html">Suporte</a></li>
+            <li><a href="./login.html">Login</a></li>
+        </ul>
+    </nav>
+    <p>Livia - RM552558</p>
+    <p>Luana - RM552994</p>
+    <p>Celeste - RM552865</p>
 </body>
 </html>
