Alterado 'map' para 'names' em todas as paginas

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </header>
     <nav class="nav-bar">
         <ul>
-            <li><a href="pages/map.html">Mapa e nomes</a></li>
-            <li><a href="pages/login.html">Produtos</a></li>
-            <li><a href="pages/empresa.html">Empresa</a></li>
-            <li><a href="pages/suporte.html">Suporte</a></li>
-            <li><a href="pages/login.html">Login</a></li>
+            <li><a href="./pages/product.html">Produtos</a></li>
+            <li><a href="./pages/empresa.html">Empresa</a></li>
+            <li><a href="./pages/suporte.html">Suporte</a></li>
+            <li><a href="./pages/login.html">Login</a></li>
+            <li><a href="./pages/names.html">Nomes</a></li>
         </ul>
     </nav>
     <section class="solution">
