--- a/pages/names.html
+++ b/pages/names.html
@@ -12,7 +12,7 @@
     </header>
     <nav class="nav-bar">
         <ul>
-            <li><a href="./map.html">Mapa e nomes</a></li>
+            <li><a href="./names.html">Nomes</a></li>
             <li><a href="./login.html">Produtos</a></li>
             <li><a href="./empresa.html">Empresa</a></li>
             <li><a href="./suporte.html">Suporte</a></li>
