Ajustado os links de navegacao

--- a/pages/names.html
+++ b/pages/names.html
@@ -12,11 +12,11 @@
     </header>
     <nav class="nav-bar">
         <ul>
-            <li><a href="./names.html">Nomes</a></li>
-            <li><a href="./login.html">Produtos</a></li>
+            <li><a href="./product.html">Produtos</a></li>
             <li><a href="./empresa.html">Empresa</a></li>
             <li><a href="./suporte.html">Suporte</a></li>
             <li><a href="./login.html">Login</a></li>
+            <li><a href="./names.html">Nomes</a></li>
         </ul>
     </nav>
     <p>Livia - RM552558</p>
