--- a/pages/organograma.html
+++ b/pages/organograma.html
@@ -12,7 +12,7 @@
     </header>
     <nav class="nav-bar">
         <ul>
-            <li><a href="./login.html">Produtos</a></li>
+            <li><a href="./product.html">Produtos</a></li>
             <li><a href="./empresa.html">Empresa</a></li>
             <li><a href="./suporte.html">Suporte</a></li>
             <li><a href="./login.html">Login</a></li>
