Adicionado conteudo das paginas

--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge Salesforce</title>
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/main.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
+      <a href="../index.html"><h1>Salesforce</h1></a>
     </header>
     <nav class="nav-bar">
-        <ul>
-            <li><a href="./pages/product.html">Produtos</a></li>
-            <li><a href="./pages/empresa.html">Empresa</a></li>
-            <li><a href="./pages/suporte.html">Suporte</a></li>
-            <li><a href="./pages/login.html">Login</a></li>
-            <li><a href="./pages/names.html">Nomes</a></li>
-        </ul>
+      <ul>
+        <li><a href="./pages/product.html">Produtos</a></li>
+        <li><a href="./pages/empresa.html">Empresa</a></li>
+        <li><a href="./pages/suporte.html">Suporte</a></li>
+        <li><a href="./pages/login.html">Login</a></li>
+        <li><a href="./pages/names.html">Nomes</a></li>
+      </ul>
     </nav>
     <section class="solution">
-        <h3>Solução para o projeto:</h3>
-        <p>Nosso objetivo é tornar o site mais acessível com ferramentas como: </p>
-        <ul>
-            <li>Cores contrastantes</li>
-            <li>Imagens e botões com descrições</li>
-            <li>Navegação acessível (Hierarquias na estrutura da página, menu pull-down largo.)</li>
-            <li>Atalhos de teclado e comando por voz</li>  
-            <li>Avatar de libras</li>
-            <li>Ações claras e objetivas</li>
-        </ul>
-        <p>Como segundo objetivo, queremos tornar o site mais atrativo para captar mais clientes, manter os anteriores e gerar mais vendas.
-        <ul>
-            <li>Implementação de um Chatbot atrativo</li>
-            <li>Site mais interativo</li>
-            <li>Responsividade</li>
-            <li>Otimizar a quantidade de informação na página</li>
-            <li>Layout intuitivo</li>
-        </ul>
-        </p>
+      <h3>Solução para o projeto:</h3>
+      <p>Nosso objetivo é tornar o site mais acessível com ferramentas como:</p>
+      <ul>
+        <li>Cores contrastantes</li>
+        <li>Imagens e botões com descrições</li>
+        <li>
+          Navegação acessível (Hierarquias na estrutura da página, menu
+          pull-down largo.)
+        </li>
+        <li>Atalhos de teclado e comando por voz</li>
+        <li>Avatar de libras</li>
+        <li>Ações claras e objetivas</li>
+      </ul>
+      <p>
+        Como segundo objetivo, queremos tornar o site mais atrativo para captar
+        mais clientes, manter os anteriores e gerar mais vendas.
+      </p>
+      <ul>
+        <li>Implementação de um Chatbot atrativo</li>
+        <li>Site mais interativo</li>
+        <li>Responsividade</li>
+        <li>Otimizar a quantidade de informação na página</li>
+        <li>Layout intuitivo</li>
+      </ul>
     </section>
-    <footer></footer>
-</body>
+    <footer>
+      <ul>
+        <li><a href="./pages/organograma.html">Mapa do site</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
