--- a/pages/names.html
+++ b/pages/names.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge Salesforce</title>
-    <link rel="stylesheet" href="../styles/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
+      <a href="../index.html"><h1>Salesforce</h1></a>
     </header>
     <nav class="nav-bar">
-        <ul>
-            <li><a href="./product.html">Produtos</a></li>
-            <li><a href="./empresa.html">Empresa</a></li>
-            <li><a href="./suporte.html">Suporte</a></li>
-            <li><a href="./login.html">Login</a></li>
-            <li><a href="./names.html">Nomes</a></li>
-        </ul>
+      <ul>
+        <li><a href="./product.html">Produtos</a></li>
+        <li><a href="./empresa.html">Empresa</a></li>
+        <li><a href="./suporte.html">Suporte</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="./names.html">Nomes</a></li>
+      </ul>
     </nav>
-    <p>Livia - RM552558</p>
-    <p>Luana - RM552994</p>
-    <p>Celeste - RM552865</p>
-</body>
+    <section class="solution">
+      <p>Livia - RM552558</p>
+      <p>Luana - RM552994</p>
+      <p>Celeste - RM552865</p>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="./organograma.html">Mapa do site</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
