--- a/pages/organograma.html
+++ b/pages/organograma.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge Salesforce</title>
-    <link rel="stylesheet" href="../styles/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
+      <a href="../index.html"><h1>Salesforce</h1></a>
     </header>
     <nav class="nav-bar">
-        <ul>
-            <li><a href="./product.html">Produtos</a></li>
-            <li><a href="./empresa.html">Empresa</a></li>
-            <li><a href="./suporte.html">Suporte</a></li>
-            <li><a href="./login.html">Login</a></li>
-            <li><a href="./names.html">Nomes</a></li>
-        </ul>
+      <ul>
+        <li><a href="./product.html">Produtos</a></li>
+        <li><a href="./empresa.html">Empresa</a></li>
+        <li><a href="./suporte.html">Suporte</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="./names.html">Nomes</a></li>
+      </ul>
     </nav>
-</body>
+    <section>
+      <p class="solution">
+        Para voltar para a homepage apenas clique no "Salesforce"
+      </p>
+      <div class="nav-map">
+        <dl>
+          <dt><a href="./product.html">Produtos</a></dt>
+          <dd>
+            Aqui vamos inserir os links de navegacao para todos os produtos.
+          </dd>
+        </dl>
+        <dl>
+          <dt><a href="./empresa.html">Empresa</a></dt>
+          <dd>
+            Aqui vamos inserir links de navegacao para informacoes da empresa,
+            blog e entre outros.
+          </dd>
+        </dl>
+        <dl>
+          <dt><a href="./suporte.html">Suporte</a></dt>
+          <dd>
+            Aqui vamos inserir links de navegacao para suporte, como: Chatbot,
+            Email, Telefone e FAQ
+          </dd>
+        </dl>
+        <dl>
+          <dt><a href="./login.html">Login</a></dt>
+          <dd>
+            Aqui vamos inserir o link para criar uma conta ou entrar em uma
+            conta na pagina de login.
+          </dd>
+        </dl>
+        <dl>
+          <dt><a href="./names.html">Nomes</a></dt>
+          <dd>Apenas a pagina de nome dos integrantes do grupo.</dd>
+        </dl>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="./organograma.html">Mapa do site</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
