--- a/pages/product.html
+++ b/pages/product.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge Salesforce</title>
-    <link rel="stylesheet" href="../styles/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
+      <a href="../index.html"><h1>Salesforce</h1></a>
     </header>
     <nav class="nav-bar">
-        <ul>
-            <li><a href="./product.html">Produtos</a></li>
-            <li><a href="./empresa.html">Empresa</a></li>
-            <li><a href="./suporte.html">Suporte</a></li>
-            <li><a href="./login.html">Login</a></li>
-            <li><a href="./names.html">Nomes</a></li>
-        </ul>
+      <ul>
+        <li><a href="./product.html">Produtos</a></li>
+        <li><a href="./empresa.html">Empresa</a></li>
+        <li><a href="./suporte.html">Suporte</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="./names.html">Nomes</a></li>
+      </ul>
     </nav>
-</body>
+    <section class="solution">
+      <p>
+        Nesta página iremos apresentar os produtos e serviços que a Salesforce
+        oferece, vamos diminuir o conteúdo extenso que existe no site, retirar
+        as informações desconexas e utilizaremos uma linguagem mais simples e
+        direta, para que todos possam entender o que de fato os produtos
+        oferecem e como eles irão ajudar as empresas interessadas. Vamos
+        implementar recursos para acessibilidade como: Cores contrastantes,
+        imagens e botões com descrições, hierarquia na estrutura da página. Além
+        disso também vamos aplicar responsividade, e deixaremos a página mais
+        dinâmica e interativa.
+      </p>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="./organograma.html">Mapa do site</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
