--- a/pages/suporte.html
+++ b/pages/suporte.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge Salesforce</title>
-    <link rel="stylesheet" href="../styles/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="../index.html"><h1>Challenge Salesforce</h1></a>
+      <a href="../index.html"><h1>Salesforce</h1></a>
     </header>
     <nav class="nav-bar">
-        <ul>
-            <li><a href="./product.html">Produtos</a></li>
-            <li><a href="./empresa.html">Empresa</a></li>
-            <li><a href="./suporte.html">Suporte</a></li>
-            <li><a href="./login.html">Login</a></li>
-            <li><a href="./names.html">Nomes</a></li>
-        </ul>
+      <ul>
+        <li><a href="./product.html">Produtos</a></li>
+        <li><a href="./empresa.html">Empresa</a></li>
+        <li><a href="./suporte.html">Suporte</a></li>
+        <li><a href="./login.html">Login</a></li>
+        <li><a href="./names.html">Nomes</a></li>
+      </ul>
     </nav>
-</body>
+    <section class="solution">
+      <p>
+        Suporte: a página vai conter um FAQ, com dúvidas padrões que o usuário
+        pode vir a ter sobre a empresa, e um formulário para solicitação de um
+        suporte mais personalizado. A pretensão é que essa página também
+        contenha as ferramentas de acessibilidade e design parecido com as
+        outras páginas do site mantendo o padrão. Além disso, vale citar, que a
+        área de suporte também pode ser acessada pelo uso do Chatbot que também
+        será implementado no site.
+      </p>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="./organograma.html">Mapa do site</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
